--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
@@ -11,19 +13,25 @@
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="198.0000203450521" minWidth="10.0" prefWidth="170.6666463216146" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="342.33332316080725" minWidth="0.0" prefWidth="0.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="430.33333333333337" minWidth="10.0" prefWidth="430.33333333333337" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="135.33334350585938" minHeight="10.0" prefHeight="135.33334350585938" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="131.66665649414062" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="400.0" minHeight="400.0" prefHeight="400.0" valignment="CENTER" vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="MAIN" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-            <Button onAction="#LoginRegister" mnemonicParsing="false" text="Logout" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-            <Text fx:id="username" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello, Name" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Text fx:id="username" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="73.66665649414062" />
+                  <Button layoutX="13.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="7.666666666666686" />
+                  <Button layoutX="13.0" layoutY="187.0" mnemonicParsing="false" text="Page 1" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
+                  <Button layoutX="13.0" layoutY="247.0" mnemonicParsing="false" text="Page 2" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
+                  <Pane layoutX="26.0" layoutY="152.0" prefHeight="35.0" prefWidth="122.0" />
+                  <Pane layoutX="23.0" layoutY="212.0" prefHeight="35.0" prefWidth="122.0" />
+               </children>
+            </AnchorPane>
+            <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    </children>
