--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.SceneController">
    <children>
-      <GridPane prefHeight="400.0" prefWidth="600.0">
+      <GridPane fx:id="grid" prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="198.0000203450521" minWidth="10.0" prefWidth="170.6666463216146" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="342.33332316080725" minWidth="0.0" prefWidth="0.0" />
@@ -24,9 +24,9 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Text fx:id="username" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="73.66665649414062" />
-                  <Button layoutX="13.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="7.666666666666686" />
-                  <Button layoutX="13.0" layoutY="187.0" mnemonicParsing="false" text="Page 1" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
-                  <Button layoutX="13.0" layoutY="247.0" mnemonicParsing="false" text="Page 2" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
+                  <Button fx:id="home_btn" layoutX="13.0" layoutY="127.0" mnemonicParsing="false" onAction="#navigationInit" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="7.666666666666686" />
+                  <Button fx:id="page_2" layoutX="13.0" layoutY="187.0" mnemonicParsing="false" onAction="#navigateToPage2" text="Page 2" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
+                  <Button fx:id="page_3" layoutX="13.0" layoutY="247.0" mnemonicParsing="false" onAction="#navigateToPage3" text="Page 3" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
                   <Pane layoutX="26.0" layoutY="152.0" prefHeight="35.0" prefWidth="122.0" />
                   <Pane layoutX="23.0" layoutY="212.0" prefHeight="35.0" prefWidth="122.0" />
                </children>
