--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -29,6 +29,7 @@
                   <Button fx:id="page_3" layoutX="13.0" layoutY="247.0" mnemonicParsing="false" onAction="#navigateToPage3" text="Page 3" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
                   <Pane layoutX="26.0" layoutY="152.0" prefHeight="35.0" prefWidth="122.0" />
                   <Pane layoutX="23.0" layoutY="212.0" prefHeight="35.0" prefWidth="122.0" />
+                  <Button fx:id="logout_btn" layoutX="96.0" layoutY="9.0" mnemonicParsing="false" onAction="#LoginRegister" text="Logout" />
                </children>
             </AnchorPane>
             <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="1" />
