--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -9,30 +8,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.SceneController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.SceneController">
    <children>
-      <GridPane fx:id="grid" prefHeight="400.0" prefWidth="600.0">
+      <GridPane fx:id="grid" prefHeight="500.0" prefWidth="800.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="198.0000203450521" minWidth="10.0" prefWidth="170.6666463216146" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="342.33332316080725" minWidth="0.0" prefWidth="0.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="430.33333333333337" minWidth="10.0" prefWidth="430.33333333333337" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="400.0" prefWidth="600.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="400.0" minHeight="400.0" prefHeight="400.0" valignment="CENTER" vgrow="NEVER" />
+          <RowConstraints maxHeight="500.0" minHeight="400.0" percentHeight="100.0" prefHeight="400.0" valignment="CENTER" vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane prefHeight="495.0" prefWidth="199.0">
                <children>
                   <Text fx:id="username" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="73.66665649414062" />
-                  <Button fx:id="home_btn" layoutX="13.0" layoutY="127.0" mnemonicParsing="false" onAction="#navigationInit" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="7.666666666666686" />
-                  <Button fx:id="page_2" layoutX="13.0" layoutY="187.0" mnemonicParsing="false" onAction="#navigateToPage2" text="Page 2" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
-                  <Button fx:id="page_3" layoutX="13.0" layoutY="247.0" mnemonicParsing="false" onAction="#navigateToPage3" text="Page 3" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.0" />
-                  <Pane layoutX="26.0" layoutY="152.0" prefHeight="35.0" prefWidth="122.0" />
-                  <Pane layoutX="23.0" layoutY="212.0" prefHeight="35.0" prefWidth="122.0" />
+                  <Button fx:id="home_btn" layoutX="13.0" layoutY="200.0" mnemonicParsing="false" onAction="#navigationInit" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="8.333333333333343" />
+                  <Button fx:id="page_2" layoutX="13.0" layoutY="260.0" mnemonicParsing="false" onAction="#navigateToPage2" text="Page 2" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.666666666666686" />
+                  <Button fx:id="page_3" layoutX="13.0" layoutY="320.0" mnemonicParsing="false" onAction="#navigateToPage3" text="Page 3" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.666666666666686" />
+                  <Pane layoutX="26.0" layoutY="225.0" prefHeight="35.0" prefWidth="122.0" />
+                  <Pane layoutX="23.0" layoutY="285.0" prefHeight="35.0" prefWidth="122.0" />
                   <Button fx:id="logout_btn" layoutX="96.0" layoutY="9.0" mnemonicParsing="false" onAction="#LoginRegister" text="Logout" />
                </children>
             </AnchorPane>
-            <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    </children>
