--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.SceneController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.MainController">
    <children>
       <GridPane fx:id="grid" prefHeight="500.0" prefWidth="800.0">
         <columnConstraints>
