--- a/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
@@ -18,7 +18,7 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
                   <ListView fx:id="chat_list_view" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0" />
-                  <Button fx:id="send_chat_button" mnemonicParsing="false" text="Send" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+                  <Button fx:id="send_chat_button" mnemonicParsing="false" onAction="#addChatMessage" text="Send" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="8.0" />
                   <TextField fx:id="chat_text" layoutX="173.0" layoutY="351.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="64.0" />
                </children>
             </AnchorPane>
