--- a/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.LoginRegisterController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.LoginRegisterController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
@@ -83,11 +72,11 @@
                                 <Insets bottom="10.0" />
                             </VBox.margin>
                         </CheckBox>
-                        <Button fx:id="login_btn" mnemonicParsing="false" onAction="#login" prefHeight="30.0" prefWidth="254.0" text="Login" />
+                        <Button fx:id="login_btn" mnemonicParsing="false" prefHeight="30.0" prefWidth="254.0" text="Login" />
                         <HBox alignment="CENTER" prefHeight="36.0" prefWidth="254.0" spacing="20.0">
                             <children>
                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account yet?" textAlignment="CENTER" textOrigin="BOTTOM" wrappingWidth="152.62109375" />
-                                <Button fx:id="go_to_register_btn" alignment="TOP_CENTER" defaultButton="true" graphicTextGap="0.0" mnemonicParsing="false" onAction="#gotoRegister" text="Register" underline="true" />
+                                <Button fx:id="go_to_register_btn" alignment="TOP_CENTER" defaultButton="true" graphicTextGap="0.0" mnemonicParsing="false" text="Register" underline="true" />
                             </children>
                             <VBox.margin>
                                 <Insets top="18.0" />
@@ -204,11 +193,11 @@
                         <Insets right="2.0" />
                      </padding>
                   </HBox>
-                        <Button fx:id="register_btn" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="680.0" text="Register" textFill="WHITE" />
+                        <Button fx:id="register_btn" mnemonicParsing="false" prefHeight="25.0" prefWidth="680.0" text="Register" textFill="WHITE" />
                         <HBox alignment="CENTER" prefHeight="28.0" prefWidth="248.0" spacing="20.0">
                             <children>
                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an account yet? " />
-                                <Button fx:id="go_to_login_btn" mnemonicParsing="false" onAction="#gotoLogin" text="Login" textFill="#44977d" underline="true" />
+                                <Button fx:id="go_to_login_btn" mnemonicParsing="false" text="Login" textFill="#44977d" underline="true" />
                             </children>
                             <VBox.margin>
                                 <Insets top="10.0" />
