--- a/src/main/resources/com/epds/javafx_login/scenes/main.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/main.fxml
@@ -18,12 +18,12 @@
             <AnchorPane maxWidth="199.0" minWidth="199.0" prefHeight="495.0" prefWidth="199.0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                <children>
                   <Text fx:id="username" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="73.66665649414062" />
-                  <Button fx:id="home_btn" layoutX="13.0" layoutY="200.0" mnemonicParsing="false" onAction="#navigationInit" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="8.333333333333343" />
-                  <Button fx:id="chat_button" layoutX="13.0" layoutY="260.0" mnemonicParsing="false" onAction="#navigateToChat" text="Chat" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.666666666666686" />
+                  <Button fx:id="home_btn" layoutX="13.0" layoutY="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Home" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="8.333333333333343" />
+                  <Button fx:id="chat_btn" layoutX="13.0" layoutY="260.0" mnemonicParsing="false" text="Chat" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.666666666666686" />
                   <Button fx:id="page_3" layoutX="13.0" layoutY="320.0" mnemonicParsing="false" onAction="#navigateToPage3" text="Page 3" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="9.666666666666686" />
                   <Pane layoutX="26.0" layoutY="225.0" prefHeight="35.0" prefWidth="122.0" />
                   <Pane layoutX="23.0" layoutY="285.0" prefHeight="35.0" prefWidth="122.0" />
-                  <Button fx:id="logout_btn" layoutX="96.0" layoutY="9.0" mnemonicParsing="false" onAction="#LoginRegister" text="Logout" />
+                  <Button fx:id="logout_btn" layoutX="96.0" layoutY="9.0" mnemonicParsing="false" text="Logout" />
                </children>
             </AnchorPane>
             <AnchorPane fx:id="main_container" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
