Updated chat UI and font

--- a/src/main/resources/com/epds/javafx_login/list_cells/chat_user_cell.fxml
+++ b/src/main/resources/com/epds/javafx_login/list_cells/chat_user_cell.fxml
@@ -13,7 +13,7 @@
             <ImageView fx:id="chat_user_image" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="chat_user_name" text="User Name" wrapText="true">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font size="13.0" />
                </font>
             </Label>
          </children>
