--- a/src/main/resources/com/epds/javafx_login/list_cells/chat_user_cell.fxml
+++ b/src/main/resources/com/epds/javafx_login/list_cells/chat_user_cell.fxml
@@ -10,7 +10,10 @@
    <children>
       <HBox>
          <children>
-            <ImageView fx:id="chat_user_image" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="chat_user_image" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <HBox.margin>
+                  <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+               </HBox.margin></ImageView>
             <Label fx:id="chat_user_name" text="User Name" wrapText="true">
                <font>
                   <Font size="13.0" />
