--- a/src/main/resources/com/epds/javafx_login/scenes/home.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/home.fxml
@@ -1,15 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="123.0" prefWidth="183.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.HomeController">
-    <children>
-        <Text layoutX="49.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HOME" AnchorPane.bottomAnchor="45.748046875" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="48.37613932291666" AnchorPane.topAnchor="44.0224609375">
-            <font>
-                <Font name="System Bold" size="25.0" />
-            </font>
-        </Text>
-    </children>
+<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #eeeeee;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.utilities.controllers.HomeController">
+   <children>
+      <Pane layoutX="22.0" layoutY="40.0" prefHeight="103.0" prefWidth="559.0" style="-fx-background-color: #0D9276; -fx-background-radius: 10;">
+         <children>
+            <ImageView fitHeight="110.0" fitWidth="156.0" layoutX="387.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/design.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="39.0" layoutY="14.0" prefHeight="34.0" prefWidth="193.0" text="Welcome to" textFill="WHITE">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <Label layoutX="68.0" layoutY="47.0" prefHeight="34.0" prefWidth="91.0" text="IIMS !" textFill="WHITE">
+               <font>
+                  <Font name="Baskerville Bold" size="30.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="26.0" layoutY="167.0" prefHeight="174.0" prefWidth="371.0" style="-fx-background-color: white; -fx-background-radius: 10;">
+         <children>
+            <Pane layoutX="392.0" layoutY="-2.0" prefHeight="174.0" prefWidth="162.0" style="-fx-background-color: white; -fx-background-radius: 10;" />
+         </children>
+      </Pane>
+      <Pane layoutX="27.0" layoutY="366.0" prefHeight="110.0" prefWidth="553.0" style="-fx-background-color: white; -fx-background-radius: 10;" />
+   </children>
 </AnchorPane>
