--- a/src/main/resources/com/epds/javafx_login/scenes/stylesheet.css
+++ b/src/main/resources/com/epds/javafx_login/scenes/stylesheet.css
@@ -1,9 +1,11 @@
+
+/* --------------- LOGIN-REGISTER CSS --------------- */
 #grid_pane_login {
     -fx-background-color: #F2F2F2;
 }
 
 #login_btn {
-    -fx-background-color: #44977d;
+    -fx-background-color: #0D9276;
     -fx-text-fill: white;
 }
 
@@ -16,11 +18,11 @@
 
 #go_to_register_btn {
     -fx-background-color: null;
-    -fx-text-fill: #4B7F52;
+    -fx-text-fill: #0D9276;
 }
 
 #login_logo_pane {
-    -fx-background-color: #44977d;
+    -fx-background-color: #0D9276;
 }
 
 #grid_pane_register {
@@ -35,13 +37,17 @@
 }
 
 #register_btn {
-    -fx-background-color: #44977d;
+    -fx-background-color: #0D9276;
 }
 
 #border{
-    -fx-border-color: #cccccc;
-    -fx-border-radius: 3;
-    -fx-border-width: 1.25;
+	-fx-border-color: #cccccc;
+	-fx-border-radius: 5;
+    -fx-background-color: transparent;
+}
+
+#border:focused {
+	-fx-border-color: #0D9276;
 }
 
 #go_to_login_btn {
@@ -49,12 +55,12 @@
 }
 
 #register_logo_pane {
-    -fx-background-color: #44977d;
+    -fx-background-color: #0D9276;
 }
 
 .check-box .box {
 	-fx-background-color: white;
-	-fx-border-color: #44977d;
+	-fx-border-color: #0D9276;
 	-fx-border-radius: 3;
 	-fx-border-width: 1.5;
 
@@ -66,20 +72,110 @@
 	-fx-background-color: white;
 }
 .check-box:selected .box {
-	-fx-background-color: #44977d;
+	-fx-background-color: #0D9276;
 }
 
 .text-field {
-	-fx-accent: #44977d;
+	-fx-accent: #0D9276;
 	-fx-background-color: #cccccc, white;
 	-fx-background-radius: 3;
 }
 
 .text-field:focused {
-	-fx-background-color: #44977d, white;
+	-fx-background-color: #0D9276, white;
 }
 
 
+/* --------------- MAIN CSS --------------- */
+.main_side_button {
+    -fx-background-color: transparent;
+    -fx-border-width: 2px;
+    -fx-text-fill: 	#4d4d4d;
+}
+
+.main_side_button:pressed, .main_side_button:focused  {
+    -fx-text-fill: #FFF;
+    -fx-background-color: #0D9276; /* top right bottom left */
+    -fx-border-width: 3; /* top right bottom left */
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+}
+
+.main_side_button:hover {
+        -fx-text-fill: #8EC3B0;
+        -fx-border-color: transparent #8EC3B0 transparent black; /* top right bottom left */
+        -fx-border-width: 0 5px 0 0; /* top right bottom left */
+        -fx-font-size: 16px;
+        -fx-font-weight: bold;
+}
+
+#svgContainer {
+    -fx-padding: 0 20 0 0; /* Adds a right margin of 10 pixels */
+}
+
+#svgButton {
+    -fx-background-color: transparent; /* Makes the button background transparent */
+    -fx-padding: 3; /* Adds padding around the button */
+}
+
+#svgIcon {
+    -fx-fill: black; /* Sets the fill color of the SVG icon */
+    -fx-stroke: black; /* Matches the stroke color to the current text color */
+    -fx-stroke-linecap: round; /* Sets the stroke line cap to round */
+    -fx-stroke-linejoin: round; /* Sets the stroke line join to round */
+    -fx-stroke-width: 2; /* Sets the stroke width */
+}
+
+#svgIcon_send {
+    -fx-fill: #0D9276;
+    -fx-stroke-linecap: round;
+    -fx-stroke-linejoin: round;
+    -fx-stroke-width: 1;
+}
+
+#svgIcon_logout {
+    -fx-fill: #0D9276;
+    -fx-stroke-linecap: round;
+    -fx-stroke-linejoin: round;
+    -fx-stroke-width: 1;
+}
+
+.main_side_button:hover #svgIcon {
+    -fx-fill: #8EC3B0; /* Sets the fill color of the SVG icon on hover */
+    -fx-stroke: #8EC3B0;
+}
+
+.main_side_button:focused #svgIcon {
+    -fx-fill: #FFF;
+    -fx-stroke: #FFF;
+}
+
+
+/*--------------- MAIN CSS ---------------*/
+
+
+
+#chat_list_view {
+ -fx-background-color: null;
+ -fx-border-color: #e3e3e3;
+ -fx-border-width: 0 0 1 0;
+}
+
+#user_list_view {
+    -fx-background-color: null;
+    -fx-border-color: null;
+    -fx-border-width: 0;
+}
+
+/* Change the background color of the ListView */
+.list-view {
+    -fx-background-color: #8EC3B0; /* light gray background color */
+}
+
+/* Change the background color of the ListView cells */
+.list-cell {
+    -fx-background-color: #8EC3B0; /* light gray background color */
+}
 
 
 
