--- a/src/main/resources/com/epds/javafx_login/scenes/user-details.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/user-details.fxml
@@ -1,62 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.geometry.Insets?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.epds.javafx_login.utilities.controllers.UserDetailsController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-    <Label text="Username" layoutX="50.0" layoutY="50.0"/>
-    <TextField fx:id="usernameField" layoutX="150.0" layoutY="50.0" editable="false"/>
+<AnchorPane prefHeight="400.0" prefWidth="605.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.epds.javafx_login.utilities.controllers.UserDetailsController">
 
-    <Label text="Password" layoutX="50.0" layoutY="100.0"/>
-    <HBox id="border" layoutX="150.0" layoutY="100.0" alignment="CENTER" prefHeight="32.0" prefWidth="200.0" spacing="2.0" styleClass="text-field" stylesheets="@stylesheet.css">
+    <Label layoutX="50.0" layoutY="50.0" text="Username"/>
+    <TextField fx:id="usernameField" editable="false" layoutX="50.0" layoutY="70.0" prefHeight="26.0"
+               prefWidth="230.0"/>
+
+    <Label layoutX="321.0" layoutY="230.0" text="Password"/>
+    <HBox id="border" alignment="CENTER" layoutX="323.0" layoutY="249.0" prefHeight="17.0" prefWidth="230.0"
+          spacing="2.0" styleClass="text-field" stylesheets="@stylesheet.css">
         <children>
-            <PasswordField fx:id="login_password" editable="false" prefHeight="32.0" prefWidth="254.0" style="-fx-background-color: transparent;" />
-            <TextField fx:id="login_password_visible" editable="false" prefHeight="32.0" prefWidth="0.0" style="-fx-background-color: transparent;" />
+            <PasswordField fx:id="login_password" editable="false" prefHeight="16.0" prefWidth="186.0"
+                           style="-fx-background-color: transparent;"/>
+            <TextField fx:id="login_password_visible" editable="false" prefHeight="32.0" prefWidth="0.0"
+                       style="-fx-background-color: transparent;"/>
             <ImageView fx:id="loginPasswordToggle">
                 <image>
-                    <Image url="@../images/eye.png" />
+                    <Image url="@../images/eye.png"/>
                 </image>
             </ImageView>
         </children>
         <padding>
-            <Insets right="2.0" />
+            <Insets right="2.0"/>
         </padding>
     </HBox>
 
-    <Label text="Mobile Number" layoutX="50.0" layoutY="150.0"/>
-    <TextField fx:id="mobileNumberField" layoutX="150.0" layoutY="150.0"/>
+    <Label layoutX="324.0" layoutY="114.0" text="Mobile Number"/>
+    <TextField fx:id="mobileNumberField" layoutX="324.0" layoutY="133.0" prefHeight="26.0" prefWidth="230.0"/>
 
-    <Label text="Email" layoutX="50.0" layoutY="200.0"/>
-    <TextField fx:id="emailField" layoutX="150.0" layoutY="200.0"/>
+    <Label layoutX="324.0" layoutY="50.0" text="Email"/>
+    <TextField fx:id="emailField" layoutX="324.0" layoutY="70.0" prefHeight="26.0" prefWidth="230.0"/>
 
-    <Label text="First Name" layoutX="50.0" layoutY="250.0"/>
-    <TextField fx:id="firstNameField" layoutX="150.0" layoutY="250.0"/>
+    <Label layoutX="50.0" layoutY="114.0" text="First Name"/>
+    <TextField fx:id="firstNameField" layoutX="50.0" layoutY="133.0" prefHeight="26.0" prefWidth="230.0"/>
 
-    <Label text="Last Name" layoutX="50.0" layoutY="300.0"/>
-    <TextField fx:id="lastNameField" layoutX="150.0" layoutY="300.0"/>
+    <Label layoutX="50.0" layoutY="230.0" text="Last Name"/>
+    <TextField fx:id="lastNameField" layoutX="50.0" layoutY="250.0" prefHeight="26.0" prefWidth="230.0"/>
 
-    <Label text="Middle Name" layoutX="350.0" layoutY="50.0"/>
-    <TextField fx:id="middleNameField" layoutX="450.0" layoutY="50.0"/>
+    <Label layoutX="49.0" layoutY="173.0" text="Middle Name"/>
+    <TextField fx:id="middleNameField" layoutX="49.0" layoutY="192.0" prefHeight="26.0" prefWidth="230.0"/>
 
-    <Label text="Name Extension" layoutX="350.0" layoutY="100.0"/>
-    <TextField fx:id="nameExtensionField" layoutX="450.0" layoutY="100.0"/>
+    <Label layoutX="50.0" layoutY="287.0" text="Name Extension"/>
+    <TextField fx:id="nameExtensionField" layoutX="49.0" layoutY="307.0" prefHeight="26.0" prefWidth="230.0"/>
 
-    <Label text="Birthday" layoutX="350.0" layoutY="150.0"/>
-    <DatePicker fx:id="birthdayPicker" layoutX="450.0" layoutY="150.0" editable="false"/>
+    <Label layoutX="325.0" layoutY="173.0" text="Birthday"/>
+    <DatePicker fx:id="birthdayPicker" editable="false" layoutX="323.0" layoutY="192.0" prefHeight="26.0"
+                prefWidth="104.0"
+                style="-fx-background-color: white; -fx-border-color: #cccccc; -fx-border-radius: 3;"/>
 
-    <Label text="Sex" layoutX="350.0" layoutY="200.0"/>
-    <ChoiceBox fx:id="sexChoiceBox" layoutX="450.0" layoutY="200.0">
+    <Label layoutX="450.0" layoutY="173.0" text="Sex"/>
+    <ChoiceBox fx:id="sexChoiceBox" layoutX="450.0" layoutY="192.0" prefHeight="26.0" prefWidth="104.0"
+               styleClass="styled-choice-box">
         <items>
             <FXCollections fx:factory="observableArrayList">
                 <String fx:value="Male"/>
@@ -64,7 +75,11 @@
             </FXCollections>
         </items>
     </ChoiceBox>
-
-    <Button fx:id="user_detail_submit" text="Submit" layoutX="250.0" layoutY="350.0"/>
+    <Button fx:id="user_detail_submit" layoutX="438.0" layoutY="349.0" prefHeight="26.0" prefWidth="116.0"
+            style="-fx-background-color: #44977d;" text="SAVE CHANGES" textFill="WHITE"/>
+    <Label layoutX="50.0" layoutY="14.0" prefHeight="26.0" prefWidth="140.0" text="USER PROFILE" textFill="#44977d">
+        <font>
+            <Font name="System Bold" size="20.0"/>
+        </font>
+    </Label>
 </AnchorPane>
-
