--- a/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/chat.fxml
@@ -75,6 +75,14 @@
                         </Button>
                     </children>
                 </AnchorPane>
+                <AnchorPane fx:id="placeholder_pane" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                    <children>
+                        <Label fx:id="empty_chat_placeholder" alignment="CENTER" text="Please select a User to chat with" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <font>
+                                <Font name="Trebuchet MS Bold Italic" size="24.0" />
+                            </font></Label>
+                    </children>
+                </AnchorPane>
             </children>
         </GridPane>
     </children>
