--- a/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
+++ b/src/main/resources/com/epds/javafx_login/scenes/login-register.fxml
@@ -64,7 +64,7 @@
                             </VBox.margin>
                         </TextField>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-                  <HBox id="border" alignment="CENTER" prefHeight="0.0" prefWidth="256.0" spacing="2.0" styleClass="text-field">
+                  <HBox id="border" fx:id="login_pass_hbox" alignment="CENTER" prefHeight="0.0" prefWidth="256.0" spacing="2.0" styleClass="text-field">
                      <children>
                         <PasswordField fx:id="login_password" prefHeight="18.0" prefWidth="212.0" style="-fx-background-color: transparent;" />
                          <TextField fx:id="login_password_visible" prefHeight="32.0" prefWidth="0.0" style="-fx-background-color: transparent;" />
@@ -171,7 +171,7 @@
                             </VBox.margin>
                         </TextField>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="87.951171875" />
-                  <HBox id="border" alignment="CENTER" prefHeight="17.0" prefWidth="250.0">
+                  <HBox id="border" fx:id="register_pass_hbox" alignment="CENTER" prefHeight="17.0" prefWidth="250.0">
                      <children>
                               <PasswordField fx:id="register_pass" prefHeight="14.0" prefWidth="210.0" style="-fx-background-color: transparent;" />
                         <TextField fx:id="register_pass_visible" prefHeight="32.0" prefWidth="0.0" style="-fx-background-color: transparent;" />
@@ -189,7 +189,7 @@
                      </VBox.margin>
                   </HBox>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password" wrappingWidth="139.94384765625" />
-                  <HBox id="border" alignment="CENTER" prefHeight="18.0" prefWidth="250.0">
+                  <HBox id="border" fx:id="confirm_register_pass_hbox" alignment="CENTER" prefHeight="18.0" prefWidth="250.0">
                      <children>
                               <PasswordField fx:id="register_confirm_pass" prefHeight="11.0" prefWidth="210.0" style="-fx-background-color: transparent;">
                            <HBox.margin>
