--- a/src/main/resources/com/epds/javafx_login/list_cells/chat_user_cell.fxml
+++ b/src/main/resources/com/epds/javafx_login/list_cells/chat_user_cell.fxml
@@ -4,11 +4,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.epds.javafx_login.ui.ChatUserCellController">
    <children>
-      <HBox>
+      <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="chat_user_image" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
@@ -19,6 +20,8 @@
                   <Font size="13.0" />
                </font>
             </Label>
+            <Region HBox.hgrow="ALWAYS" />
+            <Circle fx:id="chat_status" fill="green" radius="5.0" stroke="BLACK" strokeType="INSIDE" />
          </children>
          <padding>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
